<resources>
    <string name="app_name">Under the Lamp</string>
    <string name="facebook_app_id">397161661812167</string>
    <string name="fb_login_protocol_scheme">fb397161661812167</string>


    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="apply">Apply</string>
    <string name="find_id">Find my ID</string>
    <string name="find_id_password">Find my ID And Passwrod</string>
    <string name="find_password">Find my password</string>
    <string name="close">Close</string>

    <string name="signin_email">Signup or Signin by email</string>
    <string name="signin_google">Google login</string>
    <string name="signin_facebook">Facebook login</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>
    <string name="donothave_permission">You do not have read permission</string>
    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="community">Community</string>
    <string name="information">Information</string>
    <!-- <string name="gallery">Gallery</string> -->
    <!--<string name="favorite">Favorite</string> -->
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="follow_cancel">Follow cancel</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">Liked the press</string>
    <string name="alarm_comment">left a message</string>
    <string name="alarm_follow">has started to follow your account</string>

    <!-- Comment -->
    <string name="send">Send</string>

    <!-- Add Photo -->
    <string name="upload_image">Photo Upload</string>
    <string name="hint_image_content">내용</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- Item_Detail -->
    <string name="Like">Like 0</string>
    <string name="Comment"></string>

    <!-- Commmunity -->
    <string name="hint_contest_title">제목</string>
    <string name="hint_contest_content">내용</string>
    <string name="upload">업로드</string>
    <string name="cancle">취소</string>

    <!-- Default -->
    <string name="default_name">홍길동</string>
    <string name="default_time">0분전</string>

    <!-- Search -->

        <!-- SearchCategoryFragment -->
        <string name="searchCategoryTitle">분야별 검색</string>
        <string name="searchArt">미술</string>
        <string name="searchLiterature">문학</string>
        <string name="searchPublicMusic">대중음악</string>
        <string name="searchMusic">음악</string>
        <string name="searchTheater">연극</string>
        <string name="searchVideo">영상</string>


    <!-- RandomUserFragment -->
    <string name="randomUserName"> </string>
    <string name="randomUserHashTag"> </string>


    <!-- Setting -->
    <string name="myAccountTitle">내 계정</string>
    <string name="modifyProfileImage">프로필 수정</string>
    <string name="modifyEmail">이메일 변경</string>
    <string name="modifyPassword">비밀번호 변경</string>
    <string name="appSettingTitle">앱 설정</string>
    <string name="alarmSetting">알림 설정</string>
    <string name="security">보안</string>
    <string name="accessAccount">계정 접근 권한</string>
    <string name="accessibility">접근성</string>
    <string name="logoutBnt">로그아웃</string>

    <!-- Comment -->
    <string name="commentTitle">댓글</string>
    <string name="commentHint">댓글 달기</string>

    <!-- item_comment -->
    <string name="commentUserId">\@lalala 365</string>
    <string name="commentMessage">Oh! Love this &lt;3</string>
</resources>