<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="332dp"
    android:layout_height="410dp"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorLayoutBackground">

    <TextView
        android:id="@+id/categoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/searchCategoryTitle"
        android:fontFamily="@font/pretendard_semibold"
        android:textSize="18sp"
        android:includeFontPadding="false"
        android:letterSpacing="-0.025"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0" />
    
    <ImageView
        android:id="@+id/artView"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:src="@drawable/art_category"
        app:layout_constraintTop_toBottomOf="@+id/categoryTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="0dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"/>
    
    <TextView
        android:layout_width="36dp"
        android:layout_height="22dp"
        android:text="@string/searchArt"
        android:fontFamily="@font/pretendard_semibold"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:letterSpacing="-0.025"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="@+id/artView"
        app:layout_constraintBottom_toBottomOf="@+id/artView"
        app:layout_constraintStart_toStartOf="@+id/artView"
        app:layout_constraintEnd_toEndOf="@+id/artView"
        android:layout_marginTop="82dp"
        android:layout_marginStart="20dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"  />

    <ImageView
        android:id="@+id/literatureView"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:src="@drawable/literature_category"
        app:layout_constraintTop_toBottomOf="@+id/categoryTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/artView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="11dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:layout_width="36dp"
        android:layout_height="22dp"
        android:text="@string/searchLiterature"
        android:fontFamily="@font/pretendard_semibold"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:letterSpacing="-0.025"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="@+id/literatureView"
        app:layout_constraintBottom_toBottomOf="@+id/literatureView"
        app:layout_constraintStart_toStartOf="@+id/literatureView"
        app:layout_constraintEnd_toEndOf="@+id/literatureView"
        android:layout_marginTop="82dp"
        android:layout_marginStart="20dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"  />

    <ImageView
        android:id="@+id/publicMusicView"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:src="@drawable/public_music_category"
        app:layout_constraintTop_toBottomOf="@+id/artView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:layout_width="72dp"
        android:layout_height="22dp"
        android:text="@string/searchPublicMusic"
        android:fontFamily="@font/pretendard_semibold"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:letterSpacing="-0.025"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="@+id/publicMusicView"
        app:layout_constraintBottom_toBottomOf="@+id/publicMusicView"
        app:layout_constraintStart_toStartOf="@+id/publicMusicView"
        app:layout_constraintEnd_toEndOf="@+id/publicMusicView"
        android:layout_marginTop="82dp"
        android:layout_marginStart="11dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"  />

    <ImageView
        android:id="@+id/publicMusicLayout"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:src="@drawable/public_music_category"
        app:layout_constraintTop_toBottomOf="@+id/artView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:layout_width="72dp"
        android:layout_height="22dp"
        android:text="@string/searchPublicMusic"
        android:fontFamily="@font/pretendard_semibold"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:letterSpacing="-0.025"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="@+id/publicMusicLayout"
        app:layout_constraintBottom_toBottomOf="@+id/publicMusicLayout"
        app:layout_constraintStart_toStartOf="@+id/publicMusicLayout"
        app:layout_constraintEnd_toEndOf="@+id/publicMusicLayout"
        android:layout_marginTop="82dp"
        android:layout_marginStart="20dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"  />

    <ImageView
        android:id="@+id/musicView"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:src="@drawable/music_category"
        app:layout_constraintTop_toBottomOf="@+id/literatureView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/publicMusicView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="11dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:layout_width="36dp"
        android:layout_height="22dp"
        android:text="@string/searchMusic"
        android:fontFamily="@font/pretendard_semibold"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:letterSpacing="-0.025"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="@+id/musicView"
        app:layout_constraintBottom_toBottomOf="@+id/musicView"
        app:layout_constraintStart_toStartOf= "@+id/musicView"
        app:layout_constraintEnd_toEndOf="@+id/musicView"
        android:layout_marginTop="82dp"
        android:layout_marginStart="20dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"  />

    <ImageView
        android:id="@+id/theaterView"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:src="@drawable/theater_category"
        app:layout_constraintTop_toBottomOf="@+id/publicMusicView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:layout_width="36dp"
        android:layout_height="22dp"
        android:text="@string/searchTheater"
        android:fontFamily="@font/pretendard_semibold"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:letterSpacing="-0.025"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="@+id/theaterView"
        app:layout_constraintBottom_toBottomOf="@+id/theaterView"
        app:layout_constraintStart_toStartOf= "@+id/theaterView"
        app:layout_constraintEnd_toEndOf="@+id/theaterView"
        android:layout_marginTop="82dp"
        android:layout_marginStart="20dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"  />

    <ImageView
        android:id="@+id/videoView"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:src="@drawable/video_category"
        app:layout_constraintTop_toBottomOf="@+id/publicMusicView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/theaterView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="11dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:layout_width="36dp"
        android:layout_height="22dp"
        android:text="@string/searchVideo"
        android:fontFamily="@font/pretendard_semibold"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:letterSpacing="-0.025"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="@+id/videoView"
        app:layout_constraintBottom_toBottomOf="@+id/videoView"
        app:layout_constraintStart_toStartOf= "@+id/videoView"
        app:layout_constraintEnd_toEndOf="@+id/videoView"
        android:layout_marginTop="82dp"
        android:layout_marginStart="20dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"  />


</androidx.constraintlayout.widget.ConstraintLayout>